# entraclaw

./: .coverage  .gitignore  .mcp.json.bak.31734.1777421582  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  TODOS.md  animated_bear.py  animated_cat.py  animated_dog.py  animated_penguin.py  es-metadata.yml  mkdocs.yml  owners.txt  pip.ini  pyproject.toml
.claude/: settings.json
.config/: tsaoptions.json
.github/: copilot-instructions.md
.github/workflows/: claude-pr-review.yml  codeql.yml  docs.yml  test-windows.yml
docs/: AGENT-PROMPT-persona-sati-integration.md  AGENT-PROMPT-provisioner-cert-auth.md  PLAN-mind-body-nervous-system-phase-3.md  PLAN-persona-sati-bootstrap-phases-1-2.md  SECURITY-DEBT-PROVISIONER-SECRET.md  TODO-persona-sati-host-bootstrap.md  TODO-persona-sati-integration.md  claude-windows-port.md  debug-handoff-2026-04-22.md  engineering-status.md  index.md  openai-windows-agent-identity-port.md  proposals.md
docs/architecture/: DESIGN-persona-sati-integration.md  DESIGN-teams-bot-gateway.md  FOURPAGER-entraclaw-cli-teams-augmented-token.md  FOURPAGER-openclaw-cli-teams-augmented-token.md  NEXT-WhatsApp-lightweight-teams-chat.md  PLAN-files-llm-authoring-v2.md  PLAN-files-mcp-tools.md  PLAN-multi-tenant-lightweight-chat.md  PLAN-windows-port.md  PLAN-windows-port.md.v1-bak  SPEC-dual-track-agent-identity.md  enforcement-flow.md  next-mcp-server-design.md  next-tenant-identity-setup.md  next-windows-dev-environment.md  system-overview.md
docs/clients/: persona-sati-host-bootstrap.md
docs/decisions/: 001-obo-flows-for-device-agents.md  002-agent-user-over-obo.md  003-certificate-auth-over-client-secrets.md  005-cloud-hosted-memory.md  README.md
docs/developer/: docs-site.md  qa-log.md
docs/getting-started/: quickstart.md
docs/guides/: customizing-the-body-prompt.md  storage-configuration.md
docs/plans/: persona-persistence.md
docs/platform-learnings/: agent-memory-systems.md  copilot-extensibility.md  (+13 more)
prompts/: agent_system.md
scripts/: add_agent_sponsor.py  catch_up.py  claude_memory_sync.py  cleanup-orphans.sh  create_entra_agent_ids.py  deploy-windows.ps1  diagnose-chat.py  entra_provisioning.py  entraclaw-mcp-debug.sh  export-state.sh  generate_windows_cert.py  import-state.sh  list_blueprint_certs.py  mcp_config.py  prereqs-macos.sh  prereqs-windows.ps1  provision_blob_storage.py  provisioner-token.py  rotate_cert_windows.py  setup-windows.cmd  setup-windows.ps1  setup.sh  setup_ado_credentials.sh  setup_bot.sh  setup_delegated.sh  start_bot.sh  teardown-windows.ps1  teardown.sh  verify_blueprint_cert.py
tests/: conftest.py  test_background_shutdown.py  test_certificate_windows.py  test_cncrypt_signer.py  test_config.py  test_config_windows_path.py  test_deploy_rollback.py  test_efferent_copy.py  test_environment_isolation.py  test_errors.py  test_generate_windows_cert.py  test_host_detection.py  test_keyring_sanity.py  test_logging_config.py  test_mcp_server_integration.py  test_models.py  test_no_dead_imports.py  test_outbound_discipline.py  test_platform_windows.py  test_preflight.py  test_prompt_doctrine.py
(+160 files in other folders)
