[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-identity-research"
version = "0.1.0"
description = "Research: securing agentic workflows on devices with Agent IDs and OBO flows"
requires-python = ">=3.12"
dependencies = [
    "msal>=1.28.0",
    "msal-extensions>=1.2.0",
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4",
    "respx>=0.22.0",
    "azure-identity>=1.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openclaw-mcp = "openclaw.mcp_server:main"
