[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-identity-research"
version = "0.1.0"
description = "Research: securing agentic workflows on devices with Agent IDs and OBO flows"
requires-python = ">=3.12"
dependencies = [
    "msal>=1.28.0",
    "msal-extensions>=1.2.0",
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "PyJWT>=2.8.0",
    "aiohttp>=3.9.0",
    "botbuilder-core>=4.17.0",
    "botbuilder-integration-aiohttp>=4.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "respx>=0.22.0",
    "azure-identity>=1.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["docs/reference/agent-foundry-*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["entraclaw"]
omit = [
    "src/entraclaw/mcp_server.py",
    "src/entraclaw/logging_config.py",
    "src/entraclaw/platform/mac.py",
    "src/entraclaw/platform/linux.py",
    "src/entraclaw/platform/windows.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
entraclaw-mcp = "entraclaw.mcp_server:main"
